# lid-driven-cavity-flow-PINN

./: .gitignore  LICENSE  README.md  README_data.md  install.sh  lid_driven_cavity_flow_pin.yml  pyproject.toml  torch.yml  uninstall.sh
data copy/: README.md  aeroplane.binvox  aria_download_file.txt
notebooks/: Burgers Identification (PyTorch).ipynb  PINN_models.ipynb  box_pinn.ipynb  dataset_stats.ipynb  load_data.ipynb  pinn_model_script.py  simple_minst_classification.ipynb  traditional_models.ipynb
notebooks/result/pinn-large-tanh/bs128-lr0.001-lrstep5-lrgamma0.8-epoch40/: args.json
notebooks/result/pinn-large-tanh/bs2048-lr0.0008-lrstep4-lrgamma0.8-epoch40/: args.json
notebooks/result/pinn-large-tanh/bs4096-lr0.0008-lrstep4-lrgamma0.8-epoch40/: args.json
report/: ISyE6740Projecttemplate.bib  main-mini-SKARO.aux  main.bcf  main.blg  main.lof  main.out  main.run.xml  main.tex  main.toc  proposal.aux  proposal.bcf  proposal.blg  proposal.lof  proposal.out  proposal.run.xml  proposal.tex  proposal.toc
result-razzi-torch/pinn-large-tanh/bs64-lr0.0001-lrstep50-lrgamma0.8-epoch10000/: args.json
result-razzi-torch/pinn-large-tanh/bs64-lr0.0001-lrstep50-lrgamma0.8-epoch10000/ckpt-0/: ckpt.pt  loss_history.json  lr_scheduler.pt  optimizer.pt
result-razzi-torch/pinn-large-tanh/bs64-lr0.0001-lrstep50-lrgamma0.8-epoch10000/ckpt-1/: ckpt.pt  loss_history.json  lr_scheduler.pt  optimizer.pt
result/pinn-large-tanh/bs128-lr0.001-lrstep100-lrgamma0.8-epoch10000/: args.json
result/pinn-large-tanh/bs128-lr0.001-lrstep4-lrgamma0.8-epoch10000/: args.json
result/pinn-large-tanh/bs256-lr0.0008-lrstep4-lrgamma0.8-epoch100/: args.json
result/pinn-large-tanh/bs2560-lr0.001-lrstep4-lrgamma0.8-epoch10000/: args.json
result/pinn-large-tanh/bs64-lr0.001-lrstep4-lrgamma0.8-epoch10000/: args.json
result/pinn-large-tanh/bs64-lr0.001-lrstep50-lrgamma0.8-epoch10000/: args.json
src/: model_test.pth  models.py  training_harness.py  upload_tensorboard_logs.sh
src/FlowPy-master/: FlowPy.py  FlowPy_Visualizer.py
src/Lid_driven_cavity_flow_matlab/: save_3D_matrix_as_gif.m
src/lid_driven_cavity_flow_pinn/: load_data.py  model.pth  models.py  plotting.py  train.py  training_harness.py  utils.py
src/lid_driven_cavity_flow_pinn/FlowPy/: FlowPy.py  FlowPy_Input.py  FlowPy_Visualizer.py
src/lid_driven_cavity_flow_pinn/Lid_driven_cavity_flow_matlab/: cavity.m
src/lid_driven_cavity_flow_pinn/models/: __init__.py  pinn.py  pinn_model_script.py  pinn_original_mod.py  utils.py
src/runs/Aug02_02-28-12_skaro-ubuntu/: events.out.tfevents.1659432492.skaro-ubuntu.145559.1
src/runs/Aug02_04-23-55_skaro-ubuntu/: events.out.tfevents.1659439435.skaro-ubuntu.190127.0
src/runs/Aug02_04-25-54_skaro-ubuntu/: events.out.tfevents.1659439554.skaro-ubuntu.190805.0
src/runs/Aug02_04-26-58_skaro-ubuntu/: events.out.tfevents.1659439618.skaro-ubuntu.191590.0
src/runs/Aug02_05-40-11_skaro-ubuntu/: events.out.tfevents.1659444011.skaro-ubuntu.212349.0
src/runs/Aug02_05-47-29_skaro-ubuntu/: events.out.tfevents.1659444449.skaro-ubuntu.215546.0
tests/: pytest.ini  test_import_pinn_box.py
visualizations/: visualizations.py
(+819 files in other folders)
