[tool.poetry]
name = "lid-driven-cavity-flow-pinn"
version = "0.1.0"
description = "lid driven cavity flow physics informed neural network"
authors = ["andrewbartels1 <andrewbartels1@gmail.com>"]
license = "GNU AGPL"
readme = "README.md"
packages = [{include = "src/lid_driven_cavity_flow_pinn"}]

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "^1.24.2"
pydantic = "^1.10.7"
pydantic-cli = "^4.3.0"
imageio = "^2.26.1"
Pillow = "^9.4.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
xarray = "^2023.3.0"
plotly = "^5.13.1"
scikit-image = "^0.20.0"
scikit-learn = "^1.2.2"
torch = { url = "https://download.pytorch.org/whl/rocm5.2/torch-1.13.0%2Brocm5.2-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/rocm5.2/torchvision-0.14.0%2Brocm5.2-cp310-cp310-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/rocm5.2/torchaudio-0.13.0%2Brocm5.2-cp310-cp310-linux_x86_64.whl" }


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"
pytest-timeout = "^2.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
