[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lid_driven_cavity_flow_pinn"
version = "0.1.0"
description = "lid driven cavity flow machine learning"
readme = "README.md"
license = {text = "GNU AGPL"}

dependencies = [
    "dask",
    "gcsfs",
    "s3fs",
    "geopandas",
    "fsspec",
    "numpy",
    "pandas",
    "imageio",
    "scikit-learn",
    "trimesh[all]",
    "pydantic",
    "pydantic_cli",
    "python-dotenv",
    "xarray",
    "hydra-core",
    "Pillow",
    "plotly",
    "requests",
    "matplotlib",
    "seaborn",
    "numpy",
    "PyMCubes",
    "tqdm",
    "visdom",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "datashader",
    "matplotlib",
    "pyarrow",
    "seaborn",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lid_driven_cavity_flow_pinn*"]